@@ -129,6 +129,7 @@
                 <div class="ib-eye"></div>
                 <div class="ib-hourglass"></div>
                 <div class="ib-close"></div>
+                <div class="ib-bar-graph"></div>
             </div>
         </div>
     </body>
