@@ -103,3 +103,4 @@
 @import "scss/other/eye";
 @import "scss/other/hourglass";
 @import "scss/other/close";
+@import "scss/other/bar-graph";
